Fixed linechart and areachart, fixed lable alignment on pie chart and added few interactivity responses to gameinfopage

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -68,6 +68,7 @@ body {
   margin: 0px;
   padding: 0px;
   font-size: 14px;
+  overflow: auto;
 }
 
 .App {
